package bataille_navale.models.Objects.boat;

public enum BoatDirection {
    Horizontal,
    Vertical;
}
